estilização das imagens finalizada

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </div>
     </section>
   
-    <section class="ofertas-natureza">
+    <section class="ofertas-natureza subtitulo-oferta-natureza">
       <h2>Ofertas</h2>
       <h3>Com até <span>50%</span>de desconto.</h3>
 
@@ -149,24 +149,25 @@
         </div>
     </section>
 
-    <section>
+    <section class="subtitulo-oferta-natureza">
       <h2>Explore a Natureza</h2>
       <h3>Viaje conosco e veja o melhor que a natureza tem a ofereceer. </h3>
-      <div class="natureza">
-        <div>
-          <img src="imagens/lencol.jpg" alt="Lençois Maranhenses - Brasil" title="Lençois Maranhenses - Brasil">
+      <div class="natureza-duas-imagens">
+        <figure class="imagem-natureza">
+          <img src="imagens/lencol.jpg" alt="Lençois Maranhenses - Brasil" title="Lençois Maranhenses - Brasil"> 
           <div>
             <h3>Lencois Maranhenses, Brasil</h3>
             <p>Ida e volta a partir de R$79</p>
           </div>
+        </figure >
 
-          <div>
+        <figure class="imagem-natureza">
           <img src="imagens/goias.jpg" alt="Cachoeira Santa bárbara - GO" title="Cachoeira Santa Bárbara - GO">
-            <div>
-              <h3>Cachoeira Santa Barbara, Brasil</h3>
-              <p>Ida e volta R$139</p>
+          <div>
+            <h3>Cachoeira Santa Barbara, Brasil</h3>
+            <p>Ida e volta R$139</p>
           </div>
-        </div>
+        </figure>
       </div>
     </section>
   </main>
