Estilização da pagina finalizada para Desktop

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
   </main>
 
   <footer class="container-rodape">
-
-    <div class="contatos">
-      <div>
+    <div class="contatos-rodape">
+      <div class="conteudo-rodape">
+        
         <h2>Contato</h2>
         <div>
           <img src="imagens/local.png" title="Ícone local" alt="Ícone local">
@@ -184,28 +184,31 @@
         <div>
           <img src="imagens/telefone.png" title="Ícone telefone" alt="Ícone telefone">
           <span>Telefone: (21) 9999-9999</span>
+        </div>
+        <div>
+          <img src="imagens/email.png" title="Ícone email" alt="Ícone email">
+          <span>Email: contato@agencia.com.br</span>
+        </div>
       </div>
-      <div>
-        <img src="imagens/email.png" title="Ícone email" alt="Ícone email">
-        <span>Email: contato@agencia.com.br</span>
+  
+      <div class="conteudo-rodape">
+        <h2>Nossas Redes Sociais</h2>
+        <div>
+          <img src="imagens/fb.png" title="Ícone facebook" alt="Ícone facebook">
+          <span>AgenciaDeViagem</span>
+        </div>
+        <div>
+          <img src="imagens/ig.png" title="Ícone instagram" alt="Ícone instagram">
+          <span>@AgenciaDeViagem</span>
+        </div>
+        <div>
+          <img src="imagens/tt.png" title="Ícone twitter" alt="Ícone twitter">
+          <span>@AgenciaDeViagem</span>
+        </div>
       </div>
     </div>
 
-    <div class="redes-sociais">
-      <h2>Nossas Redes Sociais</h2>
-      <div>
-        <img src="imagens/fb.png" title="Ícone facebook" alt="Ícone facebook">
-        <span>/AgenciaDeViagem</span>
-      </div>
-      <div>
-        <img src="imagens/ig.png" title="Ícone instagram" alt="Ícone instagram">
-        <span>@AgenciaDeViagem</span>
-      </div>
-      <div>
-        <img src="imagens/tt.png" title="Ícone twitter" alt="Ícone twitter">
-        <span>@AgenciaDeViagem</span>
-      </div>
-    </div>
+
   </footer>
 </body>
 </html>
